--- a/index.html
+++ b/index.html
@@ -1,85 +1,98 @@
-<html> 
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html>
     <head>
-        <title>FEM | Testimonials</title>
-        <link rel="stylesheet" href="styles.css"> 
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <main class="grid-container">
-            <div class="grid-child-1 grid-children" >
+        <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+    <section class="grid-container">
+        <section class="grid-child-1 grid-children">
+            <div class="profile-container">
+                <img src="assets/image-daniel.jpg" alt="">
                 <div class="name-container">
-                    <div class="image">
-                    <img src="assets/image-daniel.jpg" alt="">
-                    </div>
-                    <div class="name-container-text">
-                            <p class="name"> Daniel Clifford  </p>
-                            <p class="subtext"> Verified Graduate </p>
-                    </div>
-                </div>
-                <div class="testimonial-container">
-                    <p class="heading">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</p>
-                    <p class="testimonial"> “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. </p>
+                    <p class="name">Daniel Clifford </p>
+                    <p class="subtext">Verified Graduate</p>
                 </div>
             </div>
-            <div class="grid-child-2 grid-children">
+            <div class="heading-container">
+                <h1 class="heading"> "I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth."</h1>
+            </div>
+            <div class="testimonial-container">
+                <p class="paragraph"> “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup.</p>
+            </div>
+        </section>
+        <section class="grid-child-2 grid-children">
+            <div class="profile-container">
+                <img src="assets/image-daniel.jpg" alt="">
                 <div class="name-container">
-                    <div class="image">
-                        <img src="assets/image-jonathan.jpg" alt="">
-                    </div>
-                    <div class="name-container-text">
-                            <p class="name"> Jonathan Walters </p>
-                            <p class="subtext"> Verified Graduate</p>
-                    </div>
-                </div>
-                <div class="testimonial-container">
-                    <p class="heading">The team was very supportive and kept me motivated </p>
-                    <p class="testimonial"> “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. ”  </p>
+                    <p class="name">Jonathan Walters </p>
+                    <p class="subtext">Verified Graduate</p>
                 </div>
             </div>
-            <div class="grid-child-3 grid-children">
+            <div class="heading-container">
+                <h1 class="heading">The team was very supportive and kept me motivated</h1>
+            </div>
+            <div class="testimonial-container">
+                <p class="paragraph"> “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. ” </p>
+            </div>
+        </section>
+        <section class="grid-child-3 grid-children">
+            <div class="profile-container">
+                <img src="assets/image-daniel.jpg" alt="">
                 <div class="name-container">
-                    <div class="image">
-                        <img src="assets/image-jeanette.jpg" alt="">
-                    </div>
-                    <div class="name-container-text">
-                            <p class="name"> Jeanette Harmon </p>
-                            <p class="subtext"> Verified Graduate</p>
-                    </div>
-                </div>
-                <div class="testimonial-container">
-                    <p class="heading">An overall wonderful and rewarding experience</p>
-                    <p class="testimonial"> “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. ” </p>
+                    <p class="name">Jeanette Harmon </p>
+                    <p class="subtext">Verified Graduate</p>
                 </div>
             </div>
-            <div class="grid-child-4 grid-children">
+            <div class="heading-container">
+                <h1 class="heading">An overall wonderful and rewarding experience </h1>
+            </div>
+            <div class="testimonial-container">
+                <p class="paragraph"> “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. ”</p>
+            </div>
+        </section>
+        <section class="grid-child-4 grid-children">
+            <div class="profile-container">
+                <img src="assets/image-daniel.jpg" alt="">
                 <div class="name-container">
-                    <div class="image">
-                        <img src="assets/image-patrick.jpg" alt="">
-                    </div>
-                    <div class="name-container-text">
-                            <p class="name"> Patrick Abrams </p>
-                            <p class="subtext"> Verified Graduate</p>
-                    </div>
-                </div>
-                <div class="testimonial-container">
-                    <p class="heading">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</p>
-                    <p class="testimonial"> “The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people </p>
+                    <p class="name">Patrick Abrams </p>
+                    <p class="subtext">Verified Graduate</p>
                 </div>
             </div>
-            <div class="grid-child-5 grid-children">
+            <div class="heading-container">
+                <h1 class="heading"> Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy. </h1>
+            </div>
+            <div class="testimonial-container">
+                <p class="paragraph"> "The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people"</p>
+            </div>
+        </section>
+        <section class="grid-child-5 grid-children">
+            <div class="profile-container">
+                <img src="assets/image-daniel.jpg" alt="">
                 <div class="name-container">
-                    <div class="image">
-                        <img src="assets/image-kira.jpg" alt="">
-                    </div>
-                    <div class="name-container-text">
-                            <p class="name"> Kira Whittle  </p>
-                            <p class="subtext"> Verified Graduate</p>
-                    </div>
-                </div>
-                <div class="testimonial-container">
-                    <p class="heading"> Such a life-changing experience. Highly recommended!</p>
-                    <p class="testimonial"> “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend! ” </p>
+                    <p class="name"> Kira Whittle  </p>
+                    <p class="subtext">Verified Graduate</p>
                 </div>
             </div>
-        </main>
+            <div class="heading-container">
+                <h1 class="heading"> Such a life-changing experience. Highly recommended!</h1>
+            </div>
+            <div class="testimonial-container">
+                <p class="paragraph"> "“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend! ”"</p>
+            </div>
+        </section>
+    </section>
+    
     </body>
 </html>
