Final push, updated profile pictures and added an img border

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Testimonials</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
@@ -34,7 +34,7 @@
         </section>
         <section class="grid-child-2 grid-children">
             <div class="profile-container">
-                <img src="assets/image-daniel.jpg" alt="">
+                <img src="assets/image-jonathan.jpg" alt="">
                 <div class="name-container">
                     <p class="name">Jonathan Walters </p>
                     <p class="subtext">Verified Graduate</p>
@@ -49,7 +49,7 @@
         </section>
         <section class="grid-child-3 grid-children">
             <div class="profile-container">
-                <img src="assets/image-daniel.jpg" alt="">
+                <img src="assets/image-jeanette.jpg" alt="">
                 <div class="name-container">
                     <p class="name">Jeanette Harmon </p>
                     <p class="subtext">Verified Graduate</p>
@@ -64,7 +64,7 @@
         </section>
         <section class="grid-child-4 grid-children">
             <div class="profile-container">
-                <img src="assets/image-daniel.jpg" alt="">
+                <img src="assets/image-patrick.jpg" alt="">
                 <div class="name-container">
                     <p class="name">Patrick Abrams </p>
                     <p class="subtext">Verified Graduate</p>
@@ -79,7 +79,7 @@
         </section>
         <section class="grid-child-5 grid-children">
             <div class="profile-container">
-                <img src="assets/image-daniel.jpg" alt="">
+                <img src="assets/image-kira.jpg" alt="">
                 <div class="name-container">
                     <p class="name"> Kira Whittle  </p>
                     <p class="subtext">Verified Graduate</p>
@@ -89,7 +89,7 @@
                 <h1 class="heading"> Such a life-changing experience. Highly recommended!</h1>
             </div>
             <div class="testimonial-container">
-                <p class="paragraph"> "“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend! ”"</p>
+                <p class="paragraph"> “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend!"</p>
             </div>
         </section>
     </section>
